--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- The head of a web page defines it's metadata -->
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Georgia Johnstone</title>
   <meta name="viewport" content="initial-scale=1">
   <link rel="stylesheet" href="style.css">
 </head>
