--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <!-- The head of a web page defines it's metadata -->
 <head>
+  <body style="background-color:add_color>
   <meta charset="utf-8">
   <title>Georgia Johnstone</title>
   <meta name="viewport" content="initial-scale=1">
