--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <!-- The head of a web page defines it's metadata -->
 <head>
-  <body style="background-color:add_color>
   <meta charset="utf-8">
   <title>Georgia Johnstone</title>
   <meta name="viewport" content="initial-scale=1">
   <link rel="stylesheet" href="style.css">
 </head>
+<body bgcolor="black">
+  <h1> Background is black</h1>
 <!-- The body is the container for a web page's content.  -->
 <body>
   Hello World!
