--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
 <!doctype html>
+
 <html>
+  
 <!-- The head of a web page defines it's metadata -->
+  
 <head>
+  
   <meta charset="utf-8">
   <title>Georgia Johnstone</title>
   <meta name="viewport" content="initial-scale=1">
   <link rel="stylesheet" href="style.css">
+  
 </head>
+  
 <body bgcolor="black">
-  <h1> Background is black</h1>
+  
+<h1></h1>
 <!-- The body is the container for a web page's content.  -->
 <body>
-  Hello World!
 </body>
+
 </html>
+  
+ <HTML>
+<HEAD> <TITLE>Activity - Insert animated GIF to HTML</TITLE> </HEAD>
+<BODY>
+  <IMG SRC="image1.gif">
+</BODY>
+</HTML>
