--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
   
 <h1></h1>
 <!-- The body is the container for a web page's content.  -->
-<body>
+  
+ <body>
+    <img src="image1.gif">
 </body>
-
 </html>
   
  <HTML>
