--- a/index.html
+++ b/index.html
@@ -19,13 +19,6 @@
 <!-- The body is the container for a web page's content.  -->
   
  <body>
-    <img src="image1.gif">
+    <img src="image1.gif" alt="description of gif" /> 
 </body>
 </html>
-  
- <HTML>
-<HEAD> <TITLE>Activity - Insert animated GIF to HTML</TITLE> </HEAD>
-<BODY>
-  <IMG SRC="image1.gif">
-</BODY>
-</HTML>
