--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 <!-- The body is the container for a web page's content.  -->
   
  <body>
-    <img src="/home/user/desktop/nerve/image1.gif" alt="description of gif" /> 
+    <img src="desktop/nerve/image1.gif" alt="description of gif" /> 
 </body>
 </html>
