--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 <!-- The body is the container for a web page's content.  -->
   
 <body>
-    <img src="https://imgur.com/gallery/8SPOril" style="width: 100%; max-width: 100%; height: auto;">
+    <img src="https://imgur.com/gallery/8SPOril.gif" style="width: 100%; max-width: 100%; height: auto;">
 </body>
 </html>
