--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 <!-- The body is the container for a web page's content.  -->
   
 <body>
-    <img src="https://i.imgur.com/HREKoa6.mp4" style="width: 100%; max-width: 100%; height: auto;">
+    <img src="https://i.imgur.com/HREKoa6.mp4">
 </body>
 </html>
