--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 <!-- The body is the container for a web page's content.  -->
   
 <body>
-    <img src="https://i.imgur.com/HREKoa6.mp4">
+  <img src="https://i.imgur.com/HREKoa6.mp4" style="width: absolute; max-width: absolute; height: auto;">
 </body>
 </html>
