--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <!-- The body is the container for a web page's content.  -->
   
 <body>
-  <img src="https://i.imgur.com/HREKoa6.mp4" style="width: absolute; max-width: absolute; height: auto;">
+  <div style = "position:absolute; left:80px; top:20px; background-color:black;">
+  <img src="https://i.imgur.com/HREKoa6.mp4" style="width: 100%; max-width: 100%; height: auto;">
+  </div>
 </body>
 </html>
